--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <a href="assets/pdf/Manideep_Resume.pdf" class="hire-btn" target="_blank">Hire Me</a>
+    <a href="#" class="hire-btn">Hire Me</a>
   </header>
 
   <!-- About Section -->
@@ -42,6 +42,7 @@
             solve real-world problems. I enjoy collaborating across teams, understanding customer needs, and building innovative
             solutions that deliver measurable impact
         </p>
+        <a href="assets/pdf/Manideep_Resume.pdf" class="resume-btn" target="_blank">Resume</a>
       </div>
     </div>
   </section>
